# self-correcting-agentic-system

./: .gitignore
ai-context/: 00_project_mission.md  01_architecture_principles.md  02_canonical_data_model.md  03_event_stream_contract.md  04_adapter_model.md  05_multi_tenant_model.md  06_ui_contract_rules.md  07_skill_execution_model.md  08_evaluation_model.md  09_non_goals.md  10_definition_of_done.md  project_current_status.md
backend/: README.md  pyproject.toml
backend/app/: drive_provider.py  drive_scaffolder.py  event_bus.py  google_drive_provider.py  main.py  models.py  orchestrator.py  run_manager.py  simulation.py  tenant_config.py
backend/tests/: test_drive_scaffolder.py  test_google_drive_provider.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/app/: routes.ts
frontend/src/app/components/: Layout.tsx  PageHeader.tsx  SkillDetailDrawer.tsx  TenantSelector.tsx
frontend/src/app/context/: TenantContext.tsx
frontend/src/app/screens/: AdapterConfiguration.tsx  AgentConsole.tsx  ClassificationManager.tsx  EvaluationDashboard.tsx  KnowledgeAlignment.tsx  ServiceNowConnector.tsx  TenantManagement.tsx  TenantOnboarding.tsx  TenantSetup.tsx
frontend/src/hooks/: useAgentRun.ts
frontend/src/lib/: api.ts
frontend/src/state/: agentReducer.ts
frontend/src/types/: agents.ts
